--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       <meta name="description" lang="fr" content="Warp Code Agence Web Créative à Vannes. Nous développons des sites internet, vitrine, e-commerce et des applications web pour les particuliers et les professionnels.">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <meta name="publisher" content="WarpCode56">
-      <meta name="keywords" lang="fr" content="developpement web, agence, responsive, design, application web, site internet, site web, Vannes, Morbihan, Lorient, Auray, Ploermel, 56, 56000, Bretagne">
+      <meta name="keywords" lang="fr" content="developpement web, warp code, agence, responsive, design, application web, site internet, site web, Vannes, Morbihan, Lorient, Auray, Ploermel, 56, 56000, Bretagne, créative">
       <link rel="canonical" href="https://www.warp-code.fr" />
       <meta name="robots" content="index, follow">
       <meta name="distribution" content="global">
@@ -36,22 +36,21 @@
       <meta name="twitter:image:height" content="600">
       <!--================================================== CSS  ================================================== -->
       <link rel="stylesheet" href="css/styleMin.css" />
-      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
       <!-- ==================================================Favicons	================================================== -->
-      <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
-      <link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60-min.png">
-      <link rel="apple-touch-icon" sizes="72x72" href="images/favicon//apple-icon-72x72-min.png">
-      <link rel="apple-touch-icon" sizes="76x76" href="images/favicon//apple-icon-76x76-min.png">
-      <link rel="apple-touch-icon" sizes="114x114" href="images/favicon//apple-icon-114x114-min.png">
-      <link rel="apple-touch-icon" sizes="120x120" href="images/favicon//apple-icon-120x120-min.png">
-      <link rel="apple-touch-icon" sizes="144x144" href="images/favicon//apple-icon-144x144-min.png">
-      <link rel="apple-touch-icon" sizes="152x152" href="images/favicon//apple-icon-152x152-min.png">
-      <link rel="apple-touch-icon" sizes="180x180" href="images/favicon//apple-icon-180x180-min.png">
-      <link rel="icon" type="image/png" sizes="192x192" href="images/favicon//android-icon-192x192-min.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="images/favicon//favicon-32x32-min.png">
-      <link rel="icon" type="image/png" sizes="96x96" href="images/favicon//favicon-96x96-min.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16-min.png">
-      <link rel="manifest" href="images/favicon//manifest.json">
+      <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57-min.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60-min.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72-min.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76-min.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114-min.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120-min.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144-min.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152-min.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180-min.png">
+      <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192-min.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32-min.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96-min.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16-min.png">
+      <link rel="manifest" href="images/favicon/manifest.json">
    </head>
    <body class="royal_preloader">
       <noscript>Votre navigateur ne supporte pas JavaScript !</noscript>
@@ -222,7 +221,7 @@
                   <article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
                      <div class="services-wrap back-dark3">
                         <h5>
-                           <span><i class="fas fa-desktop"></i></span>Identité Visuelle
+                           <span><img src="images/pc.png" alt="Moniteur Pc"></span>Identité Visuelle
                         </h5>
                         <p>Nous développons votre site web sur-mesure. Son ergonomie est pensée afin d'assurer une expérience
                            utilisateur optimale tout en restant simple d'utilisation. Nous faisons converger vos besoins tout en prenant en compte les réalités
@@ -232,7 +231,7 @@
                   <article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
                      <div class="services-wrap back-dark3">
                         <h5>
-                           <span><i class="fas fa-cogs"></i></span>Développement Web
+                           <span><img src="images/settings-gears.png" alt="settings-gears"></span>Développement Web
                         </h5>
                         <p>Nous développons des sites internet vitrine, e-commerce et des applications web en utilisant les langages
                            HTML5, CSS3, JavaScript, PHP7, MySQL. Nous pouvons aussi développer en utilisant les CMS (système de gestion de contenu) WordPress & PrestaShop.
@@ -242,7 +241,7 @@
                   <article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
                      <div class="services-wrap back-dark3">
                         <h5>
-                           <span><i class="fas fa-mobile-alt"></i></span>Responsive Web Design.
+                           <span><img src="images/mobile-phone.png" alt="mobile-phone"></span>Responsive Web Design.
                         </h5>
                         <p>Nos sites sont conçus et optimisés afin d'offrir une navigation confortable sur tous types de supports
                            (smartphones,
@@ -255,7 +254,7 @@
                   <article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
                      <div class="services-wrap back-dark3">
                         <h5>
-                           <span><i class="fas fa-chart-line"></i></span>Référencement Naturel & SEO
+                           <span><img src="images/line-chart.png" alt="line-chart"></span>Référencement Naturel & SEO
                         </h5>
                         <p>Nous mettons en oeuvre tous les outils nécessaires pour vous assurer une visibilité et une meilleure
                            indexation dans les moteurs de recherche. Le positionnement d'un site sur les-dits moteurs de recherche est un élément fondamental pour la réussite de votre activité. 
@@ -265,7 +264,7 @@
                   <article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.2s">
                      <div class="services-wrap back-dark3">
                         <h5>
-                           <span><i class="fas fa-chart-pie"></i></span>Web Marketing
+                           <span><img src="images/pie.png" alt="Pie chart"></i></span>Web Marketing
                         </h5>
                         <p>Nous proposons des outils d'analyses en temps réel et des solutions de statistiques avancées. Notre approche orientée vers le Community Management
                            permet de déployer votre présence sur les réseaux sociaux en garantissant votre e-reputation.
@@ -275,7 +274,7 @@
                   <article class="four columns" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.3s">
                      <div class="services-wrap back-dark3">
                         <h5>
-                           <span><i class="fas fa-user-edit"></i></span>Suivi personnalisé
+                           <span><img src="images/user.png" alt="user"></span>Suivi personnalisé
                         </h5>
                         <p>Nous assurons l'hébergement (nom de domaine, e-mail, espace disque...) et la sécurité de vos données
                            personnelles sur le web à travers un ensemble de techniques et d'outils performants. 
