--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
       <meta name="copyright" content="Warp-Code">
       <meta name="abstract" content="Ce site presente l'activite de l'agence, qui nous sommes, ce que nous realisons">
       <meta name="msapplication-Tilewh1tey" content="#ffffff">
-      <meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144.png">
+      <meta name="msapplication-TileImage" content="images/favicon/ms-icon-144x144.png">
       <meta name="theme-wh1tey" content="#ffffff">
       <meta name="language" content="fr">
       <!--******************Meta Facebook**************-->
@@ -33,20 +33,20 @@
       <!--================================================== CSS  ================================================== -->
       <link rel="stylesheet" href="css/styleMin.css" />
       <!-- ==================================================Favicons	================================================== -->
-      <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
-      <link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60.png">
-      <link rel="apple-touch-icon" sizes="72x72" href="images/favicon//apple-icon-72x72.png">
-      <link rel="apple-touch-icon" sizes="76x76" href="images/favicon//apple-icon-76x76.png">
-      <link rel="apple-touch-icon" sizes="114x114" href="images/favicon//apple-icon-114x114.png">
-      <link rel="apple-touch-icon" sizes="120x120" href="images/favicon//apple-icon-120x120.png">
-      <link rel="apple-touch-icon" sizes="144x144" href="images/favicon//apple-icon-144x144.png">
-      <link rel="apple-touch-icon" sizes="152x152" href="images/favicon//apple-icon-152x152.png">
-      <link rel="apple-touch-icon" sizes="180x180" href="images/favicon//apple-icon-180x180.png">
-      <link rel="icon" type="image/png" sizes="192x192" href="images/favicon//android-icon-192x192.png">
-      <link rel="icon" type="image/png" sizes="32x32" href="images/favicon//favicon-32x32.png">
-      <link rel="icon" type="image/png" sizes="96x96" href="images/favicon//favicon-96x96.png">
-      <link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16.png">
-      <link rel="manifest" href="images/favicon//manifest.json">
+      <link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57-min.png">
+      <link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60.png">
+      <link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72.png">
+      <link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76.png">
+      <link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114.png">
+      <link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120.png">
+      <link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144.png">
+      <link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152.png">
+      <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180.png">
+      <link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192.png">
+      <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+      <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96.png">
+      <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+      <link rel="manifest" href="images/favicon/manifest.json">
    </head>
    <body class="royal_preloader" id="bodyMain">
       <div id="royal_preloader"></div>
@@ -77,9 +77,9 @@
          <article class="contenu" data-scroll-reveal="enter bottom move 100px over 0.5s after 0.1s">
             <div class="carte">
                <figure class="devant">
-                  <img src="images/vitrine.png" alt="photo tablette-portable pour le site vitrine">
+                  <img src="images/vitrine.png" alt="photo tablette-portable pour le site vitrine" >
                   <div class="legend">
-                     <h2>Site <span>&nbsp;Vitrine</span></h2>
+                     <h2>Site <span>&nbsp; Vitrine</span></h2>
                   </div>
                </figure>
                <figure class="derriere">
@@ -157,7 +157,7 @@
                         meilleure indexation dans les moteurs de recherche. Le positionnement d'un site sur
                         les-dits moteurs de recherche est un <span class="whitey">élément fondamental pour la
                         réussite de votre activité</span>. <br />Tout commence dès la conception même de
-                        l'architecture de votre site. Il exite plusieurs types de référencement : <span class="whitey">naturel
+                        l'architecture de votre site. Il existe plusieurs types de référencement : <span class="whitey">naturel
                         ou payant</span>.
                      </p>
                   </div>
