--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <meta name="publisher" content="WarpCode56">
       <meta name="keywords" lang="fr" content="developpement web, warp code, agence, responsive, design, application web, site internet, site web, Vannes, Morbihan, Lorient, Auray, Ploermel, 56, 56000, Bretagne, créative">
-      <link rel="canonical" href="https://www.warp-code.fr" />
+      <link rel="canonical" href="https://www.warp-code.fr/index.html" />
       <meta name="robots" content="index, follow">
       <meta name="distribution" content="global">
       <meta name="author" content="Sebastien CHAMPALAUNE, Florent SADOT, Cedric LE TALLEC">
@@ -51,6 +51,7 @@
       <link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96-min.png">
       <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16-min.png">
       <link rel="manifest" href="images/favicon/manifest.json">
+   
    </head>
    <body class="royal_preloader">
       <noscript>Votre navigateur ne supporte pas JavaScript !</noscript>
