--- a/offres.html
+++ b/offres.html
@@ -163,7 +163,7 @@
                               </div>
                               <h3 class="h3Men">Forfait Horaire</h3>
                         </article>
-                        <p>Si vous choisissez aucune offre <span class="whitey">Webmastering</span> pour assurer le
+                        <p>Si vous ne choisissez aucune offre <span class="whitey">Webmastering</span> pour assurer le
                               suivi de
                               nos services,
                               nous restons à votre disposition pour vous faire bénéficier de nos compétences.
