--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
    <head>
       <meta charset="utf-8">
       <meta name="google-site-verification" content="bDoxNEAeQen5X1p68hc5ZwucMjsH9f40X-q0bhsNhWE" />
-      <title>Agence de développement de sites et d'applications web</title>
+      <title>Agence de développement de sites et applications web</title>
       <meta name="description" lang="fr" content="Warp Code Agence Web Créative à Vannes. Nous développons des sites internet, vitrine, e-commerce et des applications web pour les particuliers et les professionnels.">
       <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
       <meta name="publisher" content="WarpCode56">
-      <meta name="keywords" lang="fr" content="developpement web, warp code, agence, responsive, design, application web, site internet, site web, Vannes, Morbihan, Lorient, Auray, Ploermel, 56, 56000, Bretagne, créative">
-      <link rel="canonical" href="https://www.warp-code.fr/index.html" />
+      <meta name="keywords" lang="fr" content="développement web, warp code, agence web, responsive, design, application web, site internet, site web, Vannes, Morbihan, Lorient, Auray, Ploermel, 56, 56000, Bretagne, créative">
+      <link rel="canonical" href="https://www.warp-code.fr" />
       <meta name="robots" content="index, follow">
       <meta name="distribution" content="global">
       <meta name="author" content="Sebastien CHAMPALAUNE, Florent SADOT, Cedric LE TALLEC">
@@ -18,9 +18,11 @@
       <meta name="msapplication-TileImage" content="images/favicon//ms-icon-144x144-min.png">
       <meta name="theme-color" content="#ffffff">
       <meta name="language" content="fr">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <!--******************Meta Facebook**************-->
-      <meta property="og:title" content="Warp-Code, Agence Web Créative" />
-      <meta property="og:url" content="www.warp-code.fr" />
+      <meta property="og:title" content="Warp-Code - Agence Web Créative" />
+      <meta property="og:locale" content="fr_FR" />
+      <meta property="og:url" content="https://www.warp-code.fr" />
       <meta property="og:type" content="website" />
       <meta property="og:site_name" content="warp-code.fr" />
       <meta property="og:description" content="Agence Web Créative installée à Vannes. Nous créons et développons des sites internet, vitrine, e-commerce et des applications web pour les particuliers et les professionnels." />
@@ -29,7 +31,7 @@
       <meta name="twitter:card" content="summary" />
       <meta name="twitter:site" content="@code_warp" />
       <meta name="twitter:title" content="Warp-Code, Agence Web Créative" />
-      <meta name="twitter:url" content="www.warp-code.fr" />
+      <meta name="twitter:url" content="https://www.warp-code.fr" />
       <meta name="twitter:description" content="Agence Web Créative installée à Vannes. Nous créons et développons des sites internet, vitrine, e-commerce et des applications web pour les particuliers et les professionnels." />
       <meta name="twitter:image" content="images/lion2.png" />
       <meta name="twitter:image:width" content="600">
@@ -314,8 +316,7 @@
                         <div class="social-team">
                            <ul class="list-social-team">
                               <li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-                                 <a href="https://www.linkedin.com/in/sébastien-champalaune/" title="lien externe vers le profil LinkedIn de Sébastien Champalaune"><i
-                                    class="fab fa-linkedin-in"></i></a>
+                                 <a href="https://www.linkedin.com/in/sébastien-champalaune/" title="lien externe vers le profil LinkedIn de Sébastien Champalaune"><img class="linkedin" src="images/in.png" alt="linkedin logo"></a>
                               </li>
                            </ul>
                         </div>
@@ -335,8 +336,7 @@
                         <div class="social-team">
                            <ul class="list-social-team">
                               <li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-                                 <a href="https://www.linkedin.com/in/florent-sadot/" title="lien externe vers le profil LinkedIn de Florent Sadot"><i
-                                    class="fab fa-linkedin-in"></i></a>
+                                 <a href="https://www.linkedin.com/in/florent-sadot/" title="lien externe vers le profil LinkedIn de Florent Sadot"><img class="linkedin" src="images/in.png" alt="linkedin logo"></a>
                               </li>
                            </ul>
                         </div>
@@ -356,8 +356,7 @@
                         <div class="social-team">
                            <ul class="list-social-team">
                               <li class="icon-team tipped" data-title="linkedin" data-tipper-options='{"direction":"top","follow":"true"}'>
-                                 <a href="https://www.linkedin.com/in/cédric-le-tallec/" title="lien externe vers le profil LinkedIn de Cédric Le Tallec"><i
-                                    class="fab fa-linkedin-in"></i></a>
+                                 <a href="https://www.linkedin.com/in/cédric-le-tallec/" title="lien externe vers le profil LinkedIn de Cédric Le Tallec"><img class="linkedin" src="images/in.png" alt="linkedin logo"></a>
                               </li>
                            </ul>
                         </div>
