--- a/mentions-legales.html
+++ b/mentions-legales.html
@@ -64,10 +64,10 @@
                <a class="wpc" href="https://www.warp-code.fr/">Warp Code</a>
                <br/>
                <br>
-               <strong>Responsable publication</strong> : Warp Code – contact@warp-code.fr
+               <strong>Responsable publication</strong> : <a class="wpc" href="https://www.warp-code.fr/">Warp Code</a>
                <br/>
                <br>
-               <strong>Webmaster</strong> : Warp Code – contact@warp-code.fr
+               <strong>Webmaster</strong> : <a class="wpc" href="https://www.warp-code.fr/">Warp Code</a>
                <br/>
                <br>
                <strong>Hébergeur</strong> : OVH – SAS OVH 2 rue Kellermann BP 80157 59100 Roubaix
@@ -240,7 +240,6 @@
                   <p>2018 © Warp Code, Agence Web Créative. Tous droits réservés.
                      <a class="mention-footer" href="mentions-legales.html">Mentions légales</a>
                   </p>
-                  <p>Le modèle de mentions légales est offert par Subdelirium.com</p>
                </div>
             </article>
             <article class="two columns" data-scroll-reveal="enter bottom move 100px over 1s after 0.4s">
