--- a/app/erreur404.html
+++ b/app/erreur404.html
@@ -32,27 +32,27 @@
 	<meta name="twitter:title" content="Warp-Code, Agence Web Créative" />
 	<meta name="twitter:url" content="www.warp-code.fr" />
 	<meta name="twitter:description" content="Agence Web Créative installée à Vannes. Nous créons et développons des sites internet, vitrine, e-commerce et des applications web pour les particuliers et les professionnels." />
-	<meta name="twitter:image" content="images/lion.png" />
+	<meta name="twitter:image" content="images/lion2.png" />
 	<meta name="twitter:image:width" content="600">
 	<meta name="twitter:image:height" content="600">
 	<!--================================================== CSS  ================================================== -->
     <link rel="stylesheet" href="../css/styleMin.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito" >
 	<!-- ==================================================Favicons	================================================== -->
-	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/">
-	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon//apple-icon-60x60-min.png">
-	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon//apple-icon-72x72-min.png">
-	<link rel="apple-touch-icon" sizes="76x76" href="images/favicon//apple-icon-76x76-min.png">
-	<link rel="apple-touch-icon" sizes="114x114" href="images/favicon//apple-icon-114x114-min.png">
-	<link rel="apple-touch-icon" sizes="120x120" href="images/favicon//apple-icon-120x120-min.png">
-	<link rel="apple-touch-icon" sizes="144x144" href="images/favicon//apple-icon-144x144-min.png">
-	<link rel="apple-touch-icon" sizes="152x152" href="images/favicon//apple-icon-152x152-min.png">
-	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon//apple-icon-180x180-min.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="images/favicon//android-icon-192x192-min.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon//favicon-32x32-min.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="images/favicon//favicon-96x96-min.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon//favicon-16x16-min.png">
-	<link rel="manifest" href="images/favicon//manifest.json">
+	<link rel="apple-touch-icon" sizes="57x57" href="images/favicon/apple-icon-57x57-min.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="images/favicon/apple-icon-60x60-min.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="images/favicon/apple-icon-72x72-min.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="images/favicon/apple-icon-76x76-min.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="images/favicon/apple-icon-114x114-min.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="images/favicon/apple-icon-120x120-min.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="images/favicon/apple-icon-144x144-min.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="images/favicon/apple-icon-152x152-min.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-icon-180x180-min.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="images/favicon/android-icon-192x192-min.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32-min.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="images/favicon/favicon-96x96-min.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16-min.png">
+	<link rel="manifest" href="images/favicon/manifest.json">
 </head>
 
 <body id="body404">
