--- a/contact.html
+++ b/contact.html
@@ -63,7 +63,7 @@
       <nav class="menu">
          <div class="logo"></div>
          <ul>
-            <li class="close-menu"><a href="index.html" title="Retour en haut de page">Accueil</a></li>
+            <li class="close-menu"><a href="index.html" title="Accès à la page d'accueil">Accueil</a></li>
             <li class="close-menu"><a href="services.html" title="Accès à la pages Nos Services">Services</a></li>
             <li class="close-menu"><a href="offres.html" title="Accès à la page Nos Offres">Offres</a></li>
             <li class="close-menu"><a href="index.html#team" title="Accès à la section de présentation de l'équipe">Team</a></li>
