--- a/offres.html
+++ b/offres.html
@@ -56,11 +56,11 @@
       <nav class="menu">
             <div class="logo"></div>
             <ul>
-                  <li class="close-menu"><a href="index.html" title="Retour en haut de page">Accueil</a></li>
+                  <li class="close-menu"><a href="index.html" title="Accès à la page d'accueil">Accueil</a></li>
                   <li class="close-menu"><a href="services.html" title="Accès à la page Nos Services">Services</a></li>
                   <li class="close-menu"><a href="offres.html" title="Accès à la page Nos Offres">Offres</a></li>
                   <li class="close-menu"><a href="index.html#team" title="Accès à la section de présentation de l'équipe">Team</a></li>
-                  <li class="close-menu"><a href="index.html#contactForm" title="Accès aux informations de contact">Contact</a></li>
+                  <li class="close-menu"><a href="contact.html" title="Accès aux informations de contact">Contact</a></li>
             </ul>
       </nav>
       <div class="burger">
